--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
   <section id="projects">
+    <p class="section__text__p1">Checkout</p>
+    <h1 class="title">Projects</h1>
     <div class="projects-container">
       <div class="project">
         <img src="./assets/PROJECT_ONE.PNG" alt="Project 1">
