--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -29,7 +29,7 @@
       </div>
       <div class="menu-links">
         <li><a href="#about" onclick="toggleMenu()">About</a></li>
-        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+        <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
         <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
         <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
       </div>
@@ -71,7 +71,7 @@
             <p>I finished Javascript Full-Stack Course with a tutor. After that self-learning (projects, tutorials and etc.)</p>
           </div>
           <div class="details-container">
-            <img src="./assets/education.png" alt="Experience icon" class="icon">
+            <img src="./assets/education.png" alt="education icon" class="icon">
             <h3>Education</h3>
             <p>Finished Javascript Full-Stack Course 492hr<br>I have a certificate </p>
           </div>
@@ -81,58 +81,42 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#skills'">
   </section>
-  <section id="experience">
+  <section id="skills">
     <p class="section__text__p1">Explore My</p>
-    <h1 class="title">Experience</h1>
-    <div class="experience-details-container">
+    <h1 class="title">Skills</h1>
+    <div class="skills-details-container">
       <div class="about-containers">
         <div class="details-container">
-          <h2 class="experience-sub-title">Frontend</h2>
+          <h2 class="skills-sub-title">Skills</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>HTML</h3>
+              <img class="icon" src="./assets/html-logo.png" alt="html">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>CSS</h3>
+              <img class="icon" src="./assets/css.png" alt="css">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>JAVASCRIPT</h3>
+              <img class="icon" src="./assets/javascript.png" alt="javascript">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>TypeScript</h3>
+              <img class="icon" src="./assets/react.png" alt="react">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>REACT JS</h3>
-            </article>
-          </div>
-        </div>
-        <div class="details-container">
-          <h2 class="experience-sub-title">Backend</h2>
-          <div class="article-container">
-            <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>Node </h3>
+              <img class="icon" src="./assets/nodejs.png" alt="nodejs">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>Express JS</h3>
+              <img class="icon" src="./assets/express.png" alt="express">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                <h3>Git</h3>
+              <img class="icon" src="./assets/typescript.png" alt="typescript">
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-              <div>
-                <h3>MongoDB</h3>
-              </div>
+              <img class="icon" src="./assets/github.png" alt="github">
+            </article>
+            <article>
+              <img class="icon" src="./assets/mongodb.png" alt="mongodb">
             </article>
           </div>
         </div>
@@ -141,7 +125,7 @@
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
   <section id="projects">
-    <p class="section__text__p1">Checkout</p>
+    <p class="section__text__p1">Checkout My</p>
     <h1 class="title">Projects</h1>
     <div class="projects-container">
       <div class="project">
@@ -225,7 +209,7 @@
       <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
